--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,7 @@
 }
 
 .jumbotron3 {
-	background-image: url(../img/irene.png);
+	background-image: url(../img/irene2.png);
 	background-size: cover;
     background-repeat: no-repeat;
     height: 20%;
