--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,14 @@
 
+#twitter {
+	background: radial-gradient(#87CEFA, #1E90FF, #4169E1);
+	padding: 10px;
+	border-radius: 100px;
+	transform:rotate(-30deg);
+	position: absolute;
+	left: 1%;
+	top: 4%;
+}
+
 .navbar-default {
 	margin: 0;
 	opacity: 0.9;
