--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,14 @@
-body {font-weight:lighter;}
+body {font-weight:lighter;
+
+background-color: rgb(4, 28, 39);
+
+}
+
+.btn {
+	
+	font-size:1.5vw;
+	
+}
 
 #twitter {
 	background-color: #1E90FF;
@@ -8,11 +18,20 @@ body {font-weight:lighter;}
 	position: absolute;
 	left: 1%;
 	top: 4%;
+	font-size:1vw;
 }
 
-h1, h2, h3, h4 {
+h1, h2 {
 	font-weight:lighter;
+	font-size:5vw;
 }
+
+h3, h4 {
+	font-weight:lighter;
+	font-size:3vw;
+}
+
+p {font-size:2vw;}
 
 .navbar-default {
 	margin: 0;
@@ -64,8 +83,11 @@ h1, h2, h3, h4 {
 .footer {
 	background-color: #041c27;
 	color: #fff;
-	font-size: 13px;
 	padding: 20px 10px;
+}
+
+.footer p {
+	font-size: 1vw;
 }
 	
 .popup {
