--- a/css/custom.css
+++ b/css/custom.css
@@ -31,7 +31,10 @@ h3, h4 {
 	font-size:3vw;
 }
 
-p, figcaption, li {font-size:2vw;}
+h5 {
+	font-weight:lighter;
+	font-size:2vw;
+	}
 
 .navbar-default {
 	margin: 0;
@@ -86,9 +89,6 @@ p, figcaption, li {font-size:2vw;}
 	padding: 20px 10px;
 }
 
-.footer p {
-	font-size: 1vw;
-}
 	
 .popup {
 	position: absolute;
