--- a/css/custom.css
+++ b/css/custom.css
@@ -66,6 +66,12 @@ p {
   line-height: 1.6em;
 }
 
+.carbonbadgeContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
 /*
  * -- Layout Styles --
  */
@@ -266,17 +272,13 @@ p {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    display:flex;
+    justify-content: center;
 }
 
 .map {
 	background-color: #e3d2b4;
 	margin-bottom: 2%;
-}
-
-.index-map {
-    position: relative;
-    display:flex;
-    justify-content: center;
 }
 
 .index-map-elements {
