--- a/css/custom.css
+++ b/css/custom.css
@@ -266,7 +266,7 @@ p {
 
 
 .index-map {
-    background-image: url('../img/atlantic.jpg');
+    background-image: url('../img/atlantic.webp');
     background-repeat: no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
