--- a/css/buttons-min.css
+++ b/css/buttons-min.css
@@ -79,11 +79,11 @@ a.pure-button-selected {
     background-color: #0078e7;
     color: #fff
 }
-.pure-button-group .pure-button {
+/*  .pure-button-group .pure-button {
     margin: 0;
     border-radius: 0;
     border-right: 1px solid rgba(0, 0, 0, .2)
-}
+}*/
 .pure-button-group .pure-button:first-child {
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px
